--- a/projects.html
+++ b/projects.html
@@ -133,6 +133,47 @@
           </div>
         </div>
       </div>
+      <div class="contener my-5 g-5 text-center">
+        <div class="container text-center">
+          <div class="card">
+            <div class="card-header"><h5 class="card-title">Skills</h5></div>
+            <div class="card-body">
+              <div class="row row-cols-2 row-cols-lg-6 g-lg-3">
+                <div class="col">
+                  <div class="btn btn-primary">Agile Project Management</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">Python</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">Django</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">Git</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">HTML/SCC</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">SQL</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">C/C++</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">Linux</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">PowerBI</div>
+                </div>
+                <div class="col">
+                  <div class="btn btn-primary">Excel</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
