--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
           <div class="card">
             <div class="card-header"><h5 class="card-title">Skills</h5></div>
             <div class="card-body">
-              <div class="row row-cols-2 row-cols-lg-6 g-lg-3">
+              <div class="row row-cols-2 row-cols-lg-6 g-lg-3 g-3">
                 <div class="col">
                   <div class="btn btn-primary">Agile Project Management</div>
                 </div>
