--- a/projects.html
+++ b/projects.html
@@ -152,7 +152,7 @@
                   <div class="btn btn-primary">Git</div>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">HTML/SCC</div>
+                  <div class="btn btn-primary">HTML/CSS</div>
                 </div>
                 <div class="col">
                   <div class="btn btn-primary">SQL</div>
