--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           />
           <h1 class="fw-light">Sergey Kogutov</h1>
           <p class="lead text-muted">
-            Hi, I'm Sergey Kogutov. I am a junior developer. This page is my
-            resume, where you can get acquainted with my skills and
-            achievements. View my projects and evaluate their quality.
+            Hi, I'm Sergey Kogutov. I am a developer. This page is my resume,
+            where you can get acquainted with my skills and achievements. View
+            my projects and evaluate their quality.
           </p>
           <a
             href="https://github.com/SergeiKogutov"
