--- a/projects.html
+++ b/projects.html
@@ -152,6 +152,9 @@
                   <div class="btn btn-primary">Git</div>
                 </div>
                 <div class="col">
+                  <div class="btn btn-primary">JavaScript</div>
+                </div>
+                <div class="col">
                   <div class="btn btn-primary">HTML/CSS</div>
                 </div>
                 <div class="col">
