--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         padding: 1em;
       }
       .card:hover {
-        background-color: rgba(0, 0, 0, 0.1);
+        background-color: rgba(255, 255, 255, 0.9);
       }
       .card img {
         border-radius: 50%;
@@ -38,7 +38,7 @@
       }
     </style>
   </head>
-  <body>
+  <body background-color="#000" background="imgbg.jpg">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand p-0" href="/">
@@ -175,6 +175,48 @@
               </div>
             </div>
           </div>
+          <!-- <div class="contener my-5 g-5 text-center">
+            <div class="card">
+              <div class="card-header"><h5 class="card-title">Skills</h5></div>
+              <div class="card-body">
+                <div class="row row-cols-2 row-cols-lg-6 g-lg-3 g-3">
+                  <div class="col">
+                    <div class="btn btn-primary">Agile Project Management</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">Python</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">Django</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">Git</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">JavaScript</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">HTML/CSS</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">SQL</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">C/C++</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">Linux</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">PowerBI</div>
+                  </div>
+                  <div class="col">
+                    <div class="btn btn-primary">Excel</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
