--- a/projects.html
+++ b/projects.html
@@ -140,37 +140,44 @@
             <div class="card-body">
               <div class="row row-cols-2 row-cols-lg-6 g-lg-3 g-3">
                 <div class="col">
-                  <div class="btn btn-primary">Agile Project Management</div>
+                  <img src="1.png" alt="Agile Project Management" />
+                  <p class="card-text">Agile</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">Python</div>
+                  <img src="2.png" alt="Python" />
+                  <p class="card-text">Python</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">Django</div>
+                  <img src="3.png" alt="Django" />
+                  <p class="card-text">Django</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">Git</div>
+                  <img src="4.png" alt="Git" />
+                  <p class="card-text">Git</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">JavaScript</div>
+                  <img src="5.png" alt="JavaScript" />
+                  <p class="card-text">JavaScript</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">HTML/CSS</div>
+                  <img src="6.png" alt="HTML" />
+                  <p class="card-text">HTML</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">SQL</div>
+                  <img src="7.png" alt="CSS" />
+                  <p class="card-text">CSS</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">C/C++</div>
+                  <img src="8.png" alt="SQL" />
+                  <p class="card-text">SQL</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">Linux</div>
+                  <img src="9.png" alt="C/C++" />
+                  <p class="card-text">C/C++</p>
                 </div>
                 <div class="col">
-                  <div class="btn btn-primary">PowerBI</div>
-                </div>
-                <div class="col">
-                  <div class="btn btn-primary">Excel</div>
+                  <img src="10.png" alt="Linux" />
+                  <p class="card-text">Linux</p>
                 </div>
               </div>
             </div>
