--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a
                 href="https://vk.com/id553457014"
                 target="_blank"
-                class="btn btn-secondary"
+                class="btn btn-primary"
               >
                 My page in Vk!
               </a>
