--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
         border-radius: 1em;
         text-align: center;
         padding: 1em;
+
       }
       .card:hover {
         background-color: rgba(255, 255, 255, 0.9);
@@ -67,72 +68,68 @@
         </div>
       </div>
     </nav>
-    <div class="container my-5">
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
-        <div class="col">
-          <div class="card">
-            <img
-              src="https://sun9-67.userapi.com/impg/6amna3h7kz69VmvLx62Rd2gjj0VKk_7OjA68HQ/oPOZWL8o2ag.jpg?size=851x1080&quality=95&sign=006562ccfda57fcf523b8e818585762a&type=album"
-              class="card-img-top"
-              alt="..."
-              width=" 300"
-              height=" 300"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Tetris in terminal</h5>
-              <p class="card-text">Tetris on c, using the ncurses library.</p>
-              <a
-                href="https://github.com/SergeiKogutov/Tetris/tree/main/src"
-                target="_blank"
-                class="btn btn-primary"
-                >Go to GitHub</a
-              >
+    <div class="container my-5 g-4 text">
+      <div class="container my-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+          <div class="col">
+            <div class="card">
+              <img
+                src="tetris.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Tetris in terminal</h5>
+                <p class="card-text">Tetris on c, using the ncurses library.</p>
+                <a
+                  href="https://github.com/SergeiKogutov/Tetris/tree/main/src"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Go to GitHub</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="calc.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">SmartCalc</h5>
+                <p class="card-text">Calculator on c, with graphics on QT.</p>
+                <a
+                  href="https://github.com/SergeiKogutov/Smart_calc"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Go to GitHub</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                src="bot.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Telegram Bot</h5>
+                <p class="card-text">Telegram bot on python with a keyboard.</p>
+                <a
+                  href="https://github.com/SergeiKogutov/Python/blob/main/bot3/main.py"
+                  target="_blank"
+                  class="btn btn-primary"
+                  >Go to GitHub</a
+                >
+              </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="https://sun9-8.userapi.com/impg/-b8rBQjdp_aVYL6P7ZYacOoRuVUbDItaVMiQSA/lTz1dYAiz8I.jpg?size=1280x1245&quality=95&sign=5c86b7cef8539881f968cdfe4b49ccd8&type=album"
-              class="card-img-top"
-              alt="..."
-              width=" 300"
-              height=" 300"
-            />
-            <div class="card-body">
-              <h5 class="card-title">SmartCalc</h5>
-              <p class="card-text">Calculator on c, with graphics on QT.</p>
-              <a
-                href="https://github.com/SergeiKogutov/Smart_calc"
-                target="_blank"
-                class="btn btn-primary"
-                >Go to GitHub</a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="https://sun9-47.userapi.com/impg/ogE0W4_GxCmljyvZstDRFcr7NgOasEbDJHimwA/8D8-TcaOcZs.jpg?size=720x960&quality=95&sign=e1ccba0f16c8f9c44f6430e9631541ff&type=album"
-              class="card-img-top"
-              alt="..."
-              width=" 300"
-              height=" 300"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Telegram Bot</h5>
-              <p class="card-text">Telegram bot on python.</p>
-              <a
-                href="https://github.com/SergeiKogutov/Python/blob/main/bot3/main.py"
-                target="_blank"
-                class="btn btn-primary"
-                >Go to GitHub</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
       <div class="contener my-5 g-5 text-center">
         <div class="container text-center">
           <div class="card">
@@ -182,48 +179,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="contener my-5 g-5 text-center">
-            <div class="card">
-              <div class="card-header"><h5 class="card-title">Skills</h5></div>
-              <div class="card-body">
-                <div class="row row-cols-2 row-cols-lg-6 g-lg-3 g-3">
-                  <div class="col">
-                    <div class="btn btn-primary">Agile Project Management</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">Python</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">Django</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">Git</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">JavaScript</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">HTML/CSS</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">SQL</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">C/C++</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">Linux</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">PowerBI</div>
-                  </div>
-                  <div class="col">
-                    <div class="btn btn-primary">Excel</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
